--- a/src/WpfPowershellTerminal/WpfPowershellTerminal.csproj
+++ b/src/WpfPowershellTerminal/WpfPowershellTerminal.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dragablz" Version="0.0.3.203" />
     <PackageReference Include="SSH.NET" Version="2020.0.0-beta1" />
   </ItemGroup>
 
